# algae-twin-only

./: .dockerignore  .gitattributes  .gitignore  AI_USAGE.md  Dockerfile  LICENSE  README.md  package.xml  setup.cfg  setup.py
algae_twin/: grid.py  map_edit.py  obstacle_mirror.py  operator_ui.py  setup.py  sim_battery.py  ui_web.py  util.py
algae_twin/algae_twin/: gz_io.py  mission.py  obstacle_mirror.py  operator_ui.py  pose_sync.py  preflight.py  sim_battery.py  twin_bridge.py  ui_web.py
algae_twin/config/: bridge.yaml  twin.yaml
algae_twin/launch/: sim_gz.launch.py  twin.launch.py
algae_twin/models/burger_twin/: model.sdf
algae_twin/test/: test_operator_ui_smoke.py
config/: nav2_params.yaml
docs/: DEMO.md  REFERENCE.md  RUNBOOK.md
emulation/: README.md  add_fake_obstacle.sh  fake_robot.py  twin_emulated.launch.py
launch/: nav2.launch.py  sim_gz.launch.py
models/burger_twin/: model.config
rviz/: twin.rviz
scripts/: run_lab.sh  run_twin_emulated_wsl_docker.sh
scripts/proof/: 00_preflight.sh  01_graph.sh  02_robot_link.sh  03_localization.sh  04_command_bus.sh  05_twin_shadow.sh  06_battery.sh  07_loops_perf.sh  08_tf_tree.sh  09_keepout.sh  10_nav_goal.sh  11_mission_clean.sh  12_world_edit.sh  13_obstacle_mirror.sh  14_estop.sh  15_safety_stop.sh  README.md  _common.sh  demo_rubric.sh  prove_all.sh
test/: test_imports.py  test_util.py
worlds/: algae_world.sdf
